[tool.poetry]
name = "lsassy"
version = "3.1.12"
description = "Tool to remotely extract credentials"
readme = "README.md"
homepage = "https://github.com/hackndo/lsassy"
repository = "https://github.com/hackndo/lsassy"
keywords = ["lsassy", "lsass", "pypykatz", "credentials"]
authors = ["pixis <hackndo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
netaddr = "*"
pypykatz = "*"
impacket = {git = "https://github.com/jsherwood0/impacket.git"}
rich = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
pytest-cov = "*"
nox = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lsassy = "lsassy.console:main"

[tool.coverage.paths]
source = ["lsassy", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lsassy"]

[tool.coverage.report]
show_missing = true
